# week-tech-api

./: CONTRACT.md  Cargo.toml
src/: db.rs  main.rs
src/handlers/: admin_login.rs  checkin.rs  registrations.rs
src/models/: claims.rs  credential.rs  mod.rs
